<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/NetoBruto"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginBottom="100dp"
        android:elegantTextHeight="false"
        android:text="@string/neto_u_bruto"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BrutoNeto" />

    <Button
        android:id="@+id/BrutoNeto"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:text="@string/bruto_u_neto"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/NetoBruto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:rippleColor="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:text="@string/kalkulator_plata"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/banner_ZM"
        android:layout_width="411dp"
        android:layout_height="122dp"
        android:cropToPadding="true"
        android:onClick="fnGoToUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner_zenmasters" />

    <!--com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-500dp"
        app:adSize="LARGE_BANNER"
        app:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"></com.google.android.gms.ads.AdView-->

</androidx.constraintlayout.widget.ConstraintLayout>